# MerkleWatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  examples.md  ignore-rules.md  manifest-format.md
src/merklewatch/: __init__.py  cli.py  common_ignores.py  diff.py  filesystem.py  hashing.py  ignore.py  manifest.py  merkle.py  verification.py
