[project]
name = "merklewatch"
version = "0.3.0"
description = "Deterministic integrity verification tool using Merkle trees and cryptographic hashing"
readme = "README.md"
authors = [{ name = "ADPer", email = "adper0705@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0"
]
keywords = ["merkle-tree", "integrity", "cryptography", "hashing", "forensics", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/ADPer0705/MerkleWatch"
Repository = "https://github.com/ADPer0705/MerkleWatch"
Issues = "https://github.com/ADPer0705/MerkleWatch/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
merklewatch = "merklewatch.cli:app"

